--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
 
 :root {
   --Very-Dark-Magenta: hsl(300, 43%, 22%);
@@ -9,62 +7,117 @@
   --Light-Grayish-Magenta: hsl(300, 24%, 96%);
   --White: hsl(0, 0%, 100%);
 }
-*,::after,::before{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+*,
+::after,
+::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-    height: 100vh;
-    width: 100%;
-    background: url(/images/Background/desktop/bg-pattern-top-desktop.svg),
-     url(/images/Background/desktop/bg-pattern-bottom-desktop.svg) right;
-    background-repeat: no-repeat;
-    font-family: 'League Spartan';
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.main_container{
-border: 1px  solid crimson;
-max-width: 80%;
-}
-.intro{
+body {
+  height: 100vh;
+  width: 100%;
+  background: url(/images/Background/desktop/bg-pattern-top-desktop.svg),
+    url(/images/Background/desktop/bg-pattern-bottom-desktop.svg) right;
+  background-repeat: no-repeat;
+  font-family: "League Spartan";
   display: flex;
-justify-content: space-between;
-align-items: center;
+  align-items: center;
+  justify-content: center;
 }
-.intro_text{
-  width: 50%;
-  padding-right: 250px;
+.main_container {
+  max-width: 75%;
 }
-.intro_text h1{
-color: var(--Very-Dark-Magenta);
-font-size: 3rem;
-margin-bottom: 3rem;
+.intro {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3rem;
 }
-.intro_text p{
+.intro_text {
+  width: 40%;
+}
+.intro_text h1 {
+  color: var(--Very-Dark-Magenta);
+  font-size: 3rem;
+  margin-bottom: 1.7rem;
+  letter-spacing:-2px;
+}
+.intro_text p {
   color: var(--Dark-Grayish-Magenta);
   font-weight: 500;
+  line-height: 1.3rem;
 }
-.rating_div{
-  background: var(--Light-Grayish-Magenta)
-  ;
-  margin-bottom: 2rem;
+.ratings {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+.rating_div {
+  background: var(--Light-Grayish-Magenta);
+  margin-bottom: 0.8rem;
+  display: flex;
+  padding: 15px 25px;
+  align-items: center;
+  /* width: 55%; */
+  border-radius: 6px;
+  gap: 2rem;
+}
+.rating_div p{
+  font-weight: 800;
+  color: var(--Very-Dark-Magenta);
+  font-size: 0.85rem;
+}
+.rating_div:nth-child(1) {
+  align-self: self-start;
 }
 
-
-
-#testimonies{
-  display: flex; 
-   gap: 2rem;
-
+.rating_div:nth-child(2) {
+  align-self: center;
 }
-.testimonial{
-  width: calc(100%/3);
+.rating_div:nth-child(3) {
+  align-self: self-end;
+}
+#testimonies {
+  display: flex;
+  gap: 2rem;
+  height: 250px;
+}
+.testimonial {
+  width: calc(100% / 3);
   background: var(--Very-Dark-Magenta);
   border-radius: 8px;
   color: var(--White);
+  padding: 2rem 2.5rem;
+}
+.witness-id{
+  line-height: 1.1rem;
+}
+.verified_buyer{
+  color: var(--Dark-Grayish-Magenta);
+}
+.testimonial:nth-child(1) {
+  align-self: start;
+}
+.testimonial:nth-child(2) {
+  align-self: center;
+}
+.testimonial:nth-child(3) {
+  align-self: end;
+}
+.testimonial_header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.profile_image {
+  border-radius: 50%;
+  width: 34px;
+  margin-right: 1.5rem;
+}
+.testimonial_text {
+  line-height: 20px;
+  font-size: 1rem;
 }
 
 /* .attribution {
