--- a/style/style.css
+++ b/style/style.css
@@ -132,22 +132,30 @@ body {
 @media screen and (max-width:980px) {
   .main_container{
 gap: 2rem;  
+width: 75%;
+
 }
   .intro{
     flex-direction: column;
     width: 100%;
     gap: 2rem;
+    justify-content: center;
+    align-items: center;
     
   }
   .intro_text{
-    width: 70%;
+    width: 100%;
   }
   .ratings{
-    width: 70%;
+    width: 100%;
+    align-items: center;
   }
   .rating_div{
     align-self: center;
-    width: 100%;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+   
   }
   #testimonies{
     align-items: start;
@@ -167,6 +175,9 @@ gap: 2rem;
   }
 }
 @media screen and (max-width:770px) {
+  .main_container{
+    width: 90%;
+  }
   #testimonies{
     flex-direction: column;
     justify-content: center;
@@ -174,6 +185,16 @@ align-items: center;
   }
   .testimonial{
     margin: 0 auto;
-    width: 60%;
+    width: 90%;
+  }
+  .ratings{
+    gap: 0.5rem;
+  }
+  .rating_div{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
   }
 }
