--- a/style/style.css
+++ b/style/style.css
@@ -175,8 +175,13 @@ width: 75%;
   }
 }
 @media screen and (max-width:770px) {
+ 
   .main_container{
-    width: 90%;
+    margin: 55px 10px;
+    min-width: 90%;
+  }
+  .intro{
+text-align: center;
   }
   #testimonies{
     flex-direction: column;
@@ -185,16 +190,18 @@ align-items: center;
   }
   .testimonial{
     margin: 0 auto;
-    width: 90%;
+    width: 100%;
   }
   .ratings{
-    gap: 0.5rem;
-  }
+    gap: 0.75rem;
+}
   .rating_div{
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     text-align: center;
     margin: 0 auto;
+    gap: 0.5rem;
+    width: 100%;
   }
 }
